--- a/S06 - DS in the Real World/BLU15 - Model CSI/Exercise notebook.ipynb
+++ b/S06 - DS in the Real World/BLU15 - Model CSI/Exercise notebook.ipynb
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "e4e5b0dd",
    "metadata": {
     "deletable": false,
@@ -1170,11 +1170,11 @@
    },
    "outputs": [],
    "source": [
-    "#numerical_features = ...\n",
-    "#categorical_features = ...\n",
+    "numerical_features = X_train.dtypes[df_combined.dtypes==np.int64].index.tolist()\n",
+    "categorical_features = X_train.dtypes[df_combined.dtypes!=np.int64].index.tolist()\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "numeric_transformer = Pipeline(steps=[\n",
     "    ('imputer', SimpleImputer(strategy='median')),\n",
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "3f674067",
    "metadata": {
     "deletable": false,
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "8ca02ba4",
    "metadata": {
     "deletable": false,
@@ -1232,7 +1232,41 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('columntransformer',\n",
+       "                 ColumnTransformer(transformers=[('num',\n",
+       "                                                  Pipeline(steps=[('imputer',\n",
+       "                                                                   SimpleImputer(strategy='median')),\n",
+       "                                                                  ('scaler',\n",
+       "                                                                   StandardScaler())]),\n",
+       "                                                  ['age', 'fnlwgt',\n",
+       "                                                   'education-num',\n",
+       "                                                   'capital-gain',\n",
+       "                                                   'capital-loss',\n",
+       "                                                   'hours-per-week']),\n",
+       "                                                 ('cat',\n",
+       "                                                  Pipeline(steps=[('onehot',\n",
+       "                                                                   OneHotEncoder(handle_unknown='ignore'))]),\n",
+       "                                                  ['workclass', 'education',\n",
+       "                                                   'marital-status',\n",
+       "                                                   'occupation', 'relationship',\n",
+       "                                                   'race', 'sex',\n",
+       "                                                   'native-country',\n",
+       "                                                   'is_new'])])),\n",
+       "                ('randomforestclassifier',\n",
+       "                 RandomForestClassifier(class_weight='balanced', max_depth=3,\n",
+       "                                        min_samples_leaf=0.03, n_jobs=-1,\n",
+       "                                        random_state=42))])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pipeline.fit(X_train, y_train)"
    ]
