--- a/S06 - DS in the Real World/BLU15 - Model CSI/Exercise notebook.ipynb
+++ b/S06 - DS in the Real World/BLU15 - Model CSI/Exercise notebook.ipynb
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "id": "e4e5b0dd",
    "metadata": {
     "deletable": false,
@@ -1170,8 +1170,26 @@
    },
    "outputs": [],
    "source": [
-    "numerical_features = X_train.dtypes[df_combined.dtypes==np.int64].index.tolist()\n",
-    "categorical_features = X_train.dtypes[df_combined.dtypes!=np.int64].index.tolist()\n",
+    "numerical_features = X_train[['age',\n",
+    " 'workclass',\n",
+    " 'education',\n",
+    " 'marital-status',\n",
+    " 'race',\n",
+    " 'sex',\n",
+    " 'capital-gain',\n",
+    " 'capital-loss',\n",
+    " 'hours-per-week',\n",
+    "]].dtypes[df_combined.dtypes==np.int64].index.tolist()\n",
+    "categorical_features = X_train[['age',\n",
+    " 'workclass',\n",
+    " 'education',\n",
+    " 'marital-status',\n",
+    " 'race',\n",
+    " 'sex',\n",
+    " 'capital-gain',\n",
+    " 'capital-loss',\n",
+    " 'hours-per-week',\n",
+    "]].dtypes[df_combined.dtypes!=np.int64].index.tolist()\n",
     "\n",
     "# YOUR CODE HERE\n",
     "# raise NotImplementedError()\n",
@@ -1196,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 55,
    "id": "3f674067",
    "metadata": {
     "deletable": false,
@@ -1218,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 56,
    "id": "8ca02ba4",
    "metadata": {
     "deletable": false,
@@ -1242,27 +1260,22 @@
        "                                                                   SimpleImputer(strategy='median')),\n",
        "                                                                  ('scaler',\n",
        "                                                                   StandardScaler())]),\n",
-       "                                                  ['age', 'fnlwgt',\n",
-       "                                                   'education-num',\n",
-       "                                                   'capital-gain',\n",
+       "                                                  ['age', 'capital-gain',\n",
        "                                                   'capital-loss',\n",
        "                                                   'hours-per-week']),\n",
        "                                                 ('cat',\n",
        "                                                  Pipeline(steps=[('onehot',\n",
        "                                                                   OneHotEncoder(handle_unknown='ignore'))]),\n",
        "                                                  ['workclass', 'education',\n",
-       "                                                   'marital-status',\n",
-       "                                                   'occupation', 'relationship',\n",
-       "                                                   'race', 'sex',\n",
-       "                                                   'native-country',\n",
-       "                                                   'is_new'])])),\n",
+       "                                                   'marital-status', 'race',\n",
+       "                                                   'sex'])])),\n",
        "                ('randomforestclassifier',\n",
        "                 RandomForestClassifier(class_weight='balanced', max_depth=3,\n",
        "                                        min_samples_leaf=0.03, n_jobs=-1,\n",
        "                                        random_state=42))])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "49a0c878",
    "metadata": {
     "deletable": false,
@@ -1314,12 +1327,43 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "preds = pipeline.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
+   "id": "3e78e674",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds_proba = pipeline.predict_proba(X_test)[:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "2884f4e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precision = precision_score(y_test, preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "28bf00ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recall = recall_score(y_test, preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "id": "b1f07fcb",
    "metadata": {
     "deletable": false,
