--- a/S06 - DS in the Real World/BLU15 - Model CSI/Exercise notebook.ipynb
+++ b/S06 - DS in the Real World/BLU15 - Model CSI/Exercise notebook.ipynb
@@ -1434,12 +1434,105 @@
    "source": [
     "# threshold = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
+   "id": "497fa80b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precision, recall, thresholds = precision_recall_curve(y_test, preds_proba, pos_label=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "47182e77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_index = [i for i, prec in enumerate(precision) if prec >= 0.5][0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "21e6b344",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5735536184244152"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "thresholds[min_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "67681643",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5025363544132567"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision[min_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "4af6de86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.768753233316089"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall[min_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "3a54b3bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold = round(thresholds[min_index], 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "id": "e60e130e",
    "metadata": {
     "deletable": false,
