--- a/S06 - DS in the Real World/BLU15 - Model CSI/Exercise notebook.ipynb
+++ b/S06 - DS in the Real World/BLU15 - Model CSI/Exercise notebook.ipynb
@@ -1579,7 +1579,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
+   "id": "410599f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False,  True, False, ...,  True, False, False])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(preds_proba>=threshold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "id": "fdbe7b39",
    "metadata": {
     "deletable": false,
@@ -1594,16 +1615,16 @@
    },
    "outputs": [],
    "source": [
-    "# best_preds = ...\n",
-    "# precision = ...\n",
-    "# recall = ...\n",
+    "best_preds = (preds_proba>=threshold)\n",
+    "precision = precision_score(y_test, best_preds)\n",
+    "recall = recall_score(y_test, best_preds)\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "bfe129c3",
    "metadata": {},
    "outputs": [],
