--- a/S06 - DS in the Real World/BLU15 - Model CSI/Exercise notebook.ipynb
+++ b/S06 - DS in the Real World/BLU15 - Model CSI/Exercise notebook.ipynb
@@ -1658,7 +1658,397 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
+   "id": "9ff41726",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HS-grad         7869\n",
+       "Some-college    5485\n",
+       "Bachelors       4016\n",
+       "Masters         1311\n",
+       "Assoc-voc       1045\n",
+       "11th             856\n",
+       "Assoc-acdm       795\n",
+       "10th             699\n",
+       "7th-8th          481\n",
+       "Prof-school      433\n",
+       "9th              380\n",
+       "12th             323\n",
+       "Doctorate        297\n",
+       "5th-6th          264\n",
+       "1st-4th          129\n",
+       "Preschool         37\n",
+       "Name: education, dtype: int64"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.education.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "0eddefa5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Married-civ-spouse       11267\n",
+       "Never-married             7993\n",
+       "Divorced                  3313\n",
+       "Separated                  764\n",
+       "Widowed                    739\n",
+       "Married-spouse-absent      326\n",
+       "Married-AF-spouse           18\n",
+       "Name: marital-status, dtype: int64"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train['marital-status'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "4c2b6218",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>workclass</th>\n",
+       "      <th>fnlwgt</th>\n",
+       "      <th>education</th>\n",
+       "      <th>education-num</th>\n",
+       "      <th>marital-status</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>relationship</th>\n",
+       "      <th>race</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>capital-gain</th>\n",
+       "      <th>capital-loss</th>\n",
+       "      <th>hours-per-week</th>\n",
+       "      <th>native-country</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>is_new</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1852</th>\n",
+       "      <td>45</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>167523</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Transport-moving</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2179</td>\n",
+       "      <td>45</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9244</th>\n",
+       "      <td>33</td>\n",
+       "      <td>State-gov</td>\n",
+       "      <td>200289</td>\n",
+       "      <td>Masters</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Prof-specialty</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>Asian-Pac-Islander</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>India</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6981</th>\n",
+       "      <td>43</td>\n",
+       "      <td>Self-emp-inc</td>\n",
+       "      <td>140988</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>Other-relative</td>\n",
+       "      <td>Asian-Pac-Islander</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>India</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>396</th>\n",
+       "      <td>49</td>\n",
+       "      <td>Self-emp-not-inc</td>\n",
+       "      <td>208872</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Farming-fishing</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1672</td>\n",
+       "      <td>98</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>896</th>\n",
+       "      <td>48</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>105138</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Divorced</td>\n",
+       "      <td>Exec-managerial</td>\n",
+       "      <td>Unmarried</td>\n",
+       "      <td>Asian-Pac-Islander</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1103</th>\n",
+       "      <td>23</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>253190</td>\n",
+       "      <td>Assoc-acdm</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Handlers-cleaners</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7766</th>\n",
+       "      <td>46</td>\n",
+       "      <td>Local-gov</td>\n",
+       "      <td>187749</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Prof-specialty</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>Asian-Pac-Islander</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Philippines</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5106</th>\n",
+       "      <td>54</td>\n",
+       "      <td>Self-emp-inc</td>\n",
+       "      <td>162439</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Exec-managerial</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>98</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4003</th>\n",
+       "      <td>72</td>\n",
+       "      <td>Self-emp-not-inc</td>\n",
+       "      <td>284120</td>\n",
+       "      <td>Some-college</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14456</th>\n",
+       "      <td>23</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>208946</td>\n",
+       "      <td>Some-college</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Adm-clerical</td>\n",
+       "      <td>Own-child</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>32</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>24328 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       age         workclass  fnlwgt     education  education-num  \\\n",
+       "1852    45           Private  167523       HS-grad              9   \n",
+       "9244    33         State-gov  200289       Masters             14   \n",
+       "6981    43      Self-emp-inc  140988     Bachelors             13   \n",
+       "396     49  Self-emp-not-inc  208872       HS-grad              9   \n",
+       "896     48           Private  105138       HS-grad              9   \n",
+       "...    ...               ...     ...           ...            ...   \n",
+       "1103    23           Private  253190    Assoc-acdm             12   \n",
+       "7766    46         Local-gov  187749     Bachelors             13   \n",
+       "5106    54      Self-emp-inc  162439       HS-grad              9   \n",
+       "4003    72  Self-emp-not-inc  284120  Some-college             10   \n",
+       "14456   23           Private  208946  Some-college             10   \n",
+       "\n",
+       "           marital-status         occupation    relationship  \\\n",
+       "1852   Married-civ-spouse   Transport-moving         Husband   \n",
+       "9244   Married-civ-spouse     Prof-specialty         Husband   \n",
+       "6981   Married-civ-spouse              Sales  Other-relative   \n",
+       "396    Married-civ-spouse    Farming-fishing         Husband   \n",
+       "896              Divorced    Exec-managerial       Unmarried   \n",
+       "...                   ...                ...             ...   \n",
+       "1103   Married-civ-spouse  Handlers-cleaners         Husband   \n",
+       "7766   Married-civ-spouse     Prof-specialty         Husband   \n",
+       "5106   Married-civ-spouse    Exec-managerial         Husband   \n",
+       "4003   Married-civ-spouse              Sales         Husband   \n",
+       "14456       Never-married       Adm-clerical       Own-child   \n",
+       "\n",
+       "                     race     sex  capital-gain  capital-loss  hours-per-week  \\\n",
+       "1852                White    Male             0          2179              45   \n",
+       "9244   Asian-Pac-Islander    Male             0             0              19   \n",
+       "6981   Asian-Pac-Islander    Male             0             0              45   \n",
+       "396                 White    Male             0          1672              98   \n",
+       "896    Asian-Pac-Islander  Female             0             0              40   \n",
+       "...                   ...     ...           ...           ...             ...   \n",
+       "1103                White    Male             0             0              25   \n",
+       "7766   Asian-Pac-Islander    Male             0             0              40   \n",
+       "5106                White    Male             0             0              98   \n",
+       "4003                White    Male             0             0              40   \n",
+       "14456               White    Male             0             0              32   \n",
+       "\n",
+       "      native-country  salary  is_new  \n",
+       "1852   United-States   False    True  \n",
+       "9244           India   False    True  \n",
+       "6981           India   False    True  \n",
+       "396    United-States   False    True  \n",
+       "896    United-States   False    True  \n",
+       "...              ...     ...     ...  \n",
+       "1103   United-States   False    True  \n",
+       "7766     Philippines    True    True  \n",
+       "5106   United-States    True    True  \n",
+       "4003   United-States   False    True  \n",
+       "14456  United-States   False   False  \n",
+       "\n",
+       "[24328 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.drop( df_train.loc[(df_train['marital-status']=='Married-AF-spouse') | (df_train['education']=='Preschool')].index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "id": "fdb3ba6a",
    "metadata": {
     "deletable": false,
@@ -1673,16 +2063,17 @@
    },
    "outputs": [],
    "source": [
-    "# train_filtered = df_train.copy()\n",
-    "# train_filtered = ...\n",
+    "train_filtered = df_train.copy()\n",
+    "train_filtered = train_filtered.loc[(train_filtered['marital-status']!='Married-AF-spouse')]\n",
+    "train_filtered = train_filtered.loc[(train_filtered['education']!='Preschool')]\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "406c3fdc",
    "metadata": {
     "deletable": false,
@@ -1706,10 +2097,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "eee4844c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(24365, 16)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_filtered.shape"
    ]
