--- a/S06 - DS in the Real World/BLU15 - Model CSI/Exercise notebook.ipynb
+++ b/S06 - DS in the Real World/BLU15 - Model CSI/Exercise notebook.ipynb
@@ -2141,7 +2141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "id": "b24c9b56",
    "metadata": {
     "deletable": false,
@@ -2157,13 +2157,13 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
-    "#train_filtered['workclass'] = ..."
+    "# raise NotImplementedError()\n",
+    "train_filtered['workclass'] = train_filtered['workclass'].replace(['?','Without-pay','Never-worked'], 'No Salary')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "b90c120c",
    "metadata": {
     "deletable": false,
