--- a/S06 - DS in the Real World/BLU15 - Model CSI/Exercise notebook.ipynb
+++ b/S06 - DS in the Real World/BLU15 - Model CSI/Exercise notebook.ipynb
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "67c743af",
    "metadata": {
     "deletable": false,
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "id": "e4e5b0dd",
    "metadata": {
     "deletable": false,
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "id": "3f674067",
    "metadata": {
     "deletable": false,
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "id": "8ca02ba4",
    "metadata": {
     "deletable": false,
@@ -1275,7 +1275,7 @@
        "                                        random_state=42))])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "id": "49a0c878",
    "metadata": {
     "deletable": false,
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "id": "3e78e674",
    "metadata": {},
    "outputs": [],
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "id": "2884f4e9",
    "metadata": {},
    "outputs": [],
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "id": "28bf00ee",
    "metadata": {},
    "outputs": [],
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "id": "b1f07fcb",
    "metadata": {
     "deletable": false,
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "ce566acc",
    "metadata": {
     "deletable": false,
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 29,
    "id": "497fa80b",
    "metadata": {},
    "outputs": [],
@@ -1449,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 30,
    "id": "47182e77",
    "metadata": {},
    "outputs": [],
@@ -1459,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 31,
    "id": "21e6b344",
    "metadata": {},
    "outputs": [
@@ -1469,7 +1469,7 @@
        "0.5735536184244152"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 32,
    "id": "67681643",
    "metadata": {},
    "outputs": [
@@ -1490,7 +1490,7 @@
        "0.5025363544132567"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1501,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 33,
    "id": "4af6de86",
    "metadata": {},
    "outputs": [
@@ -1511,7 +1511,7 @@
        "0.768753233316089"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1522,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 34,
    "id": "3a54b3bf",
    "metadata": {},
    "outputs": [],
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 35,
    "id": "e60e130e",
    "metadata": {
     "deletable": false,
@@ -1579,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 36,
    "id": "410599f7",
    "metadata": {},
    "outputs": [
@@ -1589,7 +1589,7 @@
        "array([False,  True, False, ...,  True, False, False])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1600,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 37,
    "id": "fdbe7b39",
    "metadata": {
     "deletable": false,
@@ -1624,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 38,
    "id": "bfe129c3",
    "metadata": {},
    "outputs": [],
@@ -1658,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 39,
    "id": "9ff41726",
    "metadata": {},
    "outputs": [
@@ -1684,7 +1684,7 @@
        "Name: education, dtype: int64"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1695,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 40,
    "id": "0eddefa5",
    "metadata": {},
    "outputs": [
@@ -1712,7 +1712,7 @@
        "Name: marital-status, dtype: int64"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1723,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 41,
    "id": "4c2b6218",
    "metadata": {},
    "outputs": [
@@ -2037,7 +2037,7 @@
        "[24328 rows x 16 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2048,7 +2048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 42,
    "id": "fdb3ba6a",
    "metadata": {
     "deletable": false,
@@ -2073,7 +2073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 43,
    "id": "406c3fdc",
    "metadata": {
     "deletable": false,
@@ -2097,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 44,
    "id": "eee4844c",
    "metadata": {},
    "outputs": [
@@ -2107,7 +2107,7 @@
        "(24365, 16)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2141,7 +2141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 45,
    "id": "b24c9b56",
    "metadata": {
     "deletable": false,
@@ -2163,7 +2163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 46,
    "id": "b90c120c",
    "metadata": {
     "deletable": false,
@@ -2212,7 +2212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "241c9d89",
    "metadata": {
     "deletable": false,
@@ -2228,12 +2228,21 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()\n",
+    "# YOUR CODE HERE\n",
+    "# raise NotImplementedError()\n",
+    "\n",
+    "X_train_filetered, y_train_filtered = (train_filtered.drop(columns='salary'), train_filtered.salary,)\n",
+    "pipeline.fit(X_train_filetered, y_train_filtered)\n",
+    "filtered_preds_proba = pipeline.predict_proba(X_test)[:,1]\n",
+    "filtered_preds = (filtered_preds_proba>=threshold)\n",
+    "filtered_precision = precision_score(y_test, filtered_preds)\n",
+    "filtered_recall = recall_score(y_test, filtered_preds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "54f3a0d9",
    "metadata": {
     "deletable": false,
@@ -2248,7 +2257,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "\nArrays are not almost equal to 2 decimals\n ACTUAL: 0.7827211588204863\n DESIRED: 0.75581",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/xjrr/batch6-workspace/S06 - DS in the Real World/BLU15 - Model CSI/Exercise notebook.ipynb Cell 72\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU15%20-%20Model%20CSI/Exercise%20notebook.ipynb#Y112sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m np\u001b[39m.\u001b[39mtesting\u001b[39m.\u001b[39massert_almost_equal(filtered_precision, \u001b[39m0.5046\u001b[39m, decimal\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S06%20-%20DS%20in%20the%20Real%20World/BLU15%20-%20Model%20CSI/Exercise%20notebook.ipynb#Y112sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m np\u001b[39m.\u001b[39;49mtesting\u001b[39m.\u001b[39;49massert_almost_equal(filtered_recall, \u001b[39m0.75581\u001b[39;49m, decimal\u001b[39m=\u001b[39;49m\u001b[39m2\u001b[39;49m)\n",
+      "File \u001b[0;32m~/.virtualenvs/blu15/lib/python3.8/site-packages/numpy/testing/_private/utils.py:599\u001b[0m, in \u001b[0;36massert_almost_equal\u001b[0;34m(actual, desired, decimal, err_msg, verbose)\u001b[0m\n\u001b[1;32m    597\u001b[0m     \u001b[39mpass\u001b[39;00m\n\u001b[1;32m    598\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mabs\u001b[39m(desired \u001b[39m-\u001b[39m actual) \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1.5\u001b[39m \u001b[39m*\u001b[39m \u001b[39m10.0\u001b[39m\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m(\u001b[39m-\u001b[39mdecimal):\n\u001b[0;32m--> 599\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAssertionError\u001b[39;00m(_build_err_msg())\n",
+      "\u001b[0;31mAssertionError\u001b[0m: \nArrays are not almost equal to 2 decimals\n ACTUAL: 0.7827211588204863\n DESIRED: 0.75581"
+     ]
+    }
+   ],
    "source": [
     "np.testing.assert_almost_equal(filtered_precision, 0.5046, decimal=2)\n",
     "np.testing.assert_almost_equal(filtered_recall, 0.75581, decimal=2)"
